# Quantum-Turing-Machine

./: Cargo.toml  README.md  flake.nix
nix/: package.nix
src/: circuit.rs  complex.rs  gate_g.rs  main.rs  qtm.rs  register.rs
src/cli/: mod.rs
