[package]
name = "qtm"
version = "0.1.0"
edition = "2024"
authors = ["c2fc2f <contact@c2fc2f.com>"]
description = "Binary to simulates Quantum Turing Machines (QTMs) and converts them to equivalent quantum circuits"
readme = "README.md"
repository = "https://github.com/c2fc2f/Quantum-Turing-Machine"
license = "MIT"
keywords = [
  "turing-machine",
  "quantum",
]
categories = [
  "command-line-utilities",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[dependencies]
clap = { version = "4", features = [ "derive" ] }
clap_complete = "4"

[build-dependencies]
clap = { version = "4", features = [ "derive", "string" ] }
clap_mangen = "0.3"
clap_complete = "4"

